force-app/main/default/objects/B2BPaymentSettings__c/B2BPaymentSettings__c.object-meta.xml
<CustomObject>
    <label>B2B Payment Setting</label>
    <nameField>
        <label>B2B Payment Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Payment Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>