force-app/main/default/objects/B2BPaymentSettings__c/fields/CaptureURL__c.field-meta.xml
<CustomField>
    <fullName>CaptureURL__c</fullName>
    <label>CaptureURL</label>
    <type>Url</type>
</CustomField>