force-app/main/default/objects/B2BPaymentSettings__c/fields/ErrorURL__c.field-meta.xml
<CustomField>
    <fullName>ErrorURL__c</fullName>
    <label>ErrorURL</label>
    <type>Url</type>
</CustomField>