force-app/main/default/objects/B2BPaymentSettings__c/fields/MerchantID__c.field-meta.xml
<CustomField>
    <fullName>MerchantID__c</fullName>
    <label>MerchantID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>