force-app/main/default/objects/B2BPaymentSettings__c/fields/PaymentGatewayURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayURL__c</fullName>
    <label>PaymentGatewayURL</label>
    <type>Url</type>
</CustomField>