force-app/main/default/objects/B2BPaymentSettings__c/fields/RedirectTo__c.field-meta.xml
<CustomField>
    <fullName>RedirectTo__c</fullName>
    <label>RedirectTo</label>
    <type>Url</type>
</CustomField>