force-app/main/default/objects/B2BPaymentSettings__c/fields/ResponseURL__c.field-meta.xml
<CustomField>
    <fullName>ResponseURL__c</fullName>
    <label>ResponseURL</label>
    <type>Url</type>
</CustomField>